--- a/stylesheets/jbenit.css
+++ b/stylesheets/jbenit.css
@@ -1,7 +1,7 @@
 body{
   display: block;
   background-image: url("../images/back/back_hex3.png");
-  background-size: cover;
+  /* background-size: cover; */
   background-attachment: fixed;
   font-family: 'Exo 2', sans-serif;
   font-size: 1.2rem;
@@ -47,7 +47,7 @@ body{
 }
 
 .navbar {
-    background: #000000AA;
+    background: #000000DD;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
