--- a/stylesheets/jbenit.css
+++ b/stylesheets/jbenit.css
@@ -47,12 +47,22 @@ body{
 }
 
 .navbar {
-    background: #000000DD;
+    background: #000000AA;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .dropdown-item:hover {
   background: #A0A0A0AA;
+}
+
+@media (max-width:992px) {
+  .navbar {
+      background: #000000F4;
+  }
+
+  body{
+    background-size: cover;
+  }
 }
 
 /* styles for image slider */
