--- a/stylesheets/jbenit.css
+++ b/stylesheets/jbenit.css
@@ -1,7 +1,7 @@
 body{
   display: block;
   background-image: url("../images/back/back_hex3.png");
-  /* background-size: cover; */
+  background-size: cover;
   background-attachment: fixed;
   font-family: 'Exo 2', sans-serif;
   font-size: 1.2rem;
@@ -9,15 +9,15 @@ body{
 
 /* Styles for navbar */
 .navbar-dark .navbar-brand {
-  line-height: 1.7rem;
+  line-height: 1.6rem;
   font-weight: 600;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   color: #7F7F7F;
 }
 .navbar-dark .navbar-brand:focus {
-  line-height: 1.7rem;
+  line-height: 1.6rem;
   font-weight: 600;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   color: #7F7F7F;
 }
 
@@ -79,7 +79,7 @@ body{
 }
 
 .bg-img-slider {
-  background: #000000AA;
+  background: #000000CC;
 }
 
 .bg-img-slider .mySlides {
