--- a/stylesheets/jbenit.css
+++ b/stylesheets/jbenit.css
@@ -93,6 +93,18 @@ body{
 	transform: scale(1.05);
 }
 
+/* Contact section  */
+.contact-social {
+  background: #000000BB;
+}
+
+hr {
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
+}
+
+
 /* Footer */
 .foterxd {
   background: #000000F4;
