--- a/stylesheets/jbenit.css
+++ b/stylesheets/jbenit.css
@@ -201,3 +201,55 @@ hr {
   height: 100%;
   background-color: #000000AA;
 }
+
+/* styles for tooltips */
+.tooltip-inner {
+  background-color: #004085 !important;
+  /*!important is not necessary if you place custom.css at the end of your css calls. For the purpose of this demo, it seems to be required in SO snippet*/
+  color: #fff;
+}
+
+@media (min-width:576px) {
+  .tooltip-inner {
+    max-width: 200px;
+  }
+}
+
+@media (min-width:768px) {
+  .tooltip-inner {
+    max-width: 300px;
+  }
+}
+
+@media (min-width:992px) {
+  .tooltip-inner {
+    max-width: 400px;
+  }
+}
+
+@media (min-width:1200px) {
+  .tooltip-inner {
+    max-width: 500px;
+  }
+}
+
+.bs-tooltip-auto[x-placement^=bottom] .arrow::before, .bs-tooltip-bottom .arrow::before {
+  border-bottom-color: #007bff;
+}
+
+.bs-tooltip-auto[x-placement^=top] .arrow::before, .bs-tooltip-top .arrow::before {
+  border-top-color: #007bff;
+}
+
+.bs-tooltip-auto[x-placement^=left] .arrow::before, .bs-tooltip-left .arrow::before {
+  border-left-color: #007bff;
+}
+
+.bs-tooltip-auto[x-placement^=right] .arrow::before, .bs-tooltip-right .arrow::before {
+  border-right-color: #007bff;
+}
+
+.tooltip {
+  font-size: 1.1rem;
+  font-family: Exo;
+}
